text Overflow Correction in contacts

--- a/css/contact.css
+++ b/css/contact.css
@@ -1,6 +1,13 @@
 .contact-banner-area {
-    background: url(../img/banner-bg.png) no-repeat center;
+    background: url(../img/banner-bg1.png) no-repeat center;
     min-height: 510px;
+}
+
+@media (max-width: 400px) {
+    .contact-banner-area {
+        background: url(../img/banner-bg1.png) no-repeat center;
+        min-height: 510px;
+    }
 }
 
 .contact-banner-right {
@@ -24,6 +31,12 @@
 @media (max-width: 768px) {
     #hidepara {
         display: none;
+    }
+}
+
+@media (max-width: 280px) {
+    #hidepara {
+        font-size: 11px;
     }
 }
 
